--- a/nc-news/src/App.css
+++ b/nc-news/src/App.css
@@ -3,40 +3,80 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: rgb(225, 198, 225);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header {
+  background-color: rgb(92, 147, 207);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-title{
+  display:flex;
+  justify-content: center;  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.header-nav-bar {
+  background-color: rgb(50, 130, 236);
+  display: flex;
+  justify-content:space-evenly;
 }
 
-.card {
-  padding: 2em;
+.header-nav-link {
+  color: white;
 }
 
-.read-the-docs {
-  color: #888;
+.article-card {
+  background-color: rgba(255, 255, 255, 0.319);
+  color: rgb(92, 147, 207);
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
+
+.article-card-top {
+  display: flex;
+}
+
+.article-card-title {
+  font-weight: bold;
+  justify-content: left;
+  padding-right: 0.5rem;
+}
+
+.article-card-time {
+  padding-right: 0.5rem;
+}
+
+.article-card-vote {
+display: flex;
+justify-content: flex-end;
+margin-left: auto; 
+}
+
+.article-card-vote-button {
+height: 2%;
+width: 2%;
+background-color: transparent;
+color: rgb(92, 147, 207) ;
+}
+
+.article-card-bottom {
+  display: flex;
+}
+
+.article-card-topic {
+  font-weight: bold;
+  padding-right: 0.5rem;
+}
+
+.article-card-author {
+  padding-right: 0.5rem;
+}
+
+.view-article-button {
+  height: 2%;
+  display: flex;
+justify-content: flex-end;
+margin-left: auto; 
+  background-color: rgb(50, 130, 236);
+  color: white;
 }
