--- a/nc-news/src/App.css
+++ b/nc-news/src/App.css
@@ -25,6 +25,12 @@
   color: white;
 }
 
+.article-nav-bar{
+  margin-top: 0.5rem;
+  background-color: rgb(92, 147, 207);
+  display: flex;
+  justify-content:space-evenly;
+}
 .article-card {
   background-color: rgba(255, 255, 255, 0.319);
   color: rgb(92, 147, 207);
