--- a/src/App.css
+++ b/src/App.css
@@ -16,19 +16,20 @@
   width: 100%;
   display: flex;
   align-items: center;
-  padding: 0.5rem;
+  justify-content:center;
   background-color: white;
   z-index: 1000;
+ margin-top: 0.5rem;
 }
 
 .header-logo {
-  height: 90px;
-  padding-top: 0.65rem;
-  padding-bottom: 0.65rem;
+  height: 60px;
+  margin: 0.8rem;
 }
 
 .icon-images {
-  height: 3rem
+  height: 60px;  
+ 
 }
 
 #dropdown-basic-button,
