font size amended for larger screens

--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 @media only screen and (min-width: 768px) {
   #root { 
     width: 50%;
-    margin: 0 auto;
-    background-color: white;
-    font-size: 0.8em;
   }
   .header {
     width: 50%;
     left: 50%;
     transform: translateX(-50%);
+  }
+  .view-article-body {
+    font-size: 1.5em;
   }
 }
 
